# software-engineer

./: .gitignore  AI_ENGINEER_STUDY_GUIDE.md  README.md
api-versioning/: pom.xml
corabank-api/: README.md  build.gradle  settings.gradle
hedge_fund_bot/: .env.example  .gitignore  README.md  main.py  requirements.txt
java-developer/: 01-java-core.md  02-spring-boot.md  03-microservices.md  04-coding-questions.md  (+2 more)
vuln-analyzer-agent/: .gitignore  README.md  config.yaml.example  pyproject.toml  vulnerability-report.html
vuln-analyzer-agent/reports/: jackson-report.html  log4shell-report.html  mixed-vulnerabilities-report.html  open-finance-clean-report.html  spring4shell-report.html
vuln-analyzer-agent/src/vuln_analyzer/: __init__.py  config.py  main.py  models.py
vuln-analyzer-agent/src/vuln_analyzer/analyzers/: __init__.py  base.py  mend_analyzer.py  nvd_analyzer.py  offline_analyzer.py  owasp_analyzer.py
vuln-analyzer-agent/src/vuln_analyzer/fixers/: __init__.py  pom_fixer.py
vuln-analyzer-agent/src/vuln_analyzer/parsers/: __init__.py  pom_parser.py
vuln-analyzer-agent/src/vuln_analyzer/reporters/: __init__.py  console_reporter.py  html_reporter.py  json_reporter.py
vuln-analyzer-agent/test-projects/: vulnerable-mixed-report.html
vuln-analyzer-agent/test-projects/vulnerable-jackson/: pom.xml
vuln-analyzer-agent/test-projects/vulnerable-log4j/: pom.xml
vuln-analyzer-agent/test-projects/vulnerable-mixed/: pom.xml
vuln-analyzer-agent/test-projects/vulnerable-spring/: pom.xml
vuln-analyzer-agent/tests/: test_analyzers.py  test_pom_parser.py
(+368 files in other folders)
